# tiny

./: .gitignore  README.md
Snake/: CMakeLists.txt  Candy.hpp  Canvas.hpp  GameInstance.cpp  GameInstance.h  GamePlay.cpp  GamePlay.h  Snake.hpp  main.cpp
TinyGL/: CMakeLists.txt  TinyGL.cpp
TinyGL/OpenGL/: Shader.cpp  Shader.h
TinyGL/Shader/: FragmentShader.glsl  VertexShader.glsl
TinyGL/Utils/: CMakeLists.txt  FileHelper.cpp  FileHelper.h  Paths.cpp  Paths.h
